feat: improved validation, error messages, UPDATE functionality