@@ -22,6 +22,9 @@ public class EmployeeController {
     @Value("${job.titles}")
     private String jobTitlesProperty;
 
+    @Value("${job.worktypes}")
+    private String jobWorkTypesProperty;
+
     @Autowired
     public EmployeeController(EmployeeService employeeService) {
         this.employeeService = employeeService;
@@ -45,7 +48,7 @@ public class EmployeeController {
     public String showCreateForm(Model model) {
         model.addAttribute("employee", new Employee());
         model.addAttribute("jobTitles", Arrays.asList(jobTitlesProperty.split("\\s*,\\s*")));
-        model.addAttribute("workTypes", List.of("Plný úväzok", "Čiastočný úväzok", "Dohoda", "Stážista/Praktikant"));
+        model.addAttribute("jobWorkTypes", Arrays.asList(jobWorkTypesProperty.split("\\s*,\\s*")));
         return "employees/form";
     }
 
@@ -53,12 +56,21 @@ public class EmployeeController {
     public String createEmployee(@Valid @ModelAttribute("employee") Employee employee, BindingResult bindingResult, Model model) {
         if (bindingResult.hasErrors()) {
             model.addAttribute("jobTitles", Arrays.asList(jobTitlesProperty.split("\\s*,\\s*")));
-            model.addAttribute("workTypes", List.of("Plný úväzok", "Čiastočný úväzok", "Dohoda", "Stážista/Praktikant"));
+            model.addAttribute("jobWorkTypes", Arrays.asList(jobWorkTypesProperty.split("\\s*,\\s*")));
             return "employees/form";
         }
 
         employeeService.save(employee);
         return "redirect:/employees";
+    }
+
+    @GetMapping("/{id}/edit")
+    public String showEditForm(@PathVariable int id, Model model) {
+        Employee employee = employeeService.findById(id);
+        model.addAttribute("employee", employee);
+        model.addAttribute("jobTitles", Arrays.asList(jobTitlesProperty.split("\\s*,\\s*")));
+        model.addAttribute("jobWorkTypes", Arrays.asList(jobWorkTypesProperty.split("\\s*,\\s*")));
+        return "employees/form";
     }
 
     @DeleteMapping("/{id}")
